--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,9 +6,10 @@ set (Tutorial_VERSION_MINOR 0)
 
 project (osal_lib)
 add_subdirectory(communicator)
+add_subdirectory(Engine)
 
 add_executable(osal_lib main.cpp)
-target_link_libraries(communicator)
+target_link_libraries(osal_lib communicator engine)
 #add_executable(osal_lib ${Communicator_Sources} ${Controller_Sources} ${Transporter_Sources} )
 
 
