--- a/Engine/CMakeLists.txt
+++ b/Engine/CMakeLists.txt
@@ -3,6 +3,6 @@ cmake_minimum_required (VERSION 2.6)
 set (Tutorial_VERSION_MAJOR 1)
 set (Tutorial_VERSION_MINOR 0)
 
-add_library(engine  Engine/Engine.cpp   )
+add_library(engine  Engine.cpp)
 
 
