--- a/Engine/CMakeLists.txt
+++ b/Engine/CMakeLists.txt
@@ -23,6 +23,6 @@ cmake_minimum_required (VERSION 2.6)
 set (Tutorial_VERSION_MAJOR 1)
 set (Tutorial_VERSION_MINOR 0)
 
-add_library(engine  Engine.cpp)
+add_library(engine  Engine.cpp Engine_controller.cpp)
 
 
