c++11 flag support is removed from CMakeList.txt. Now it is aviable in build_ubuntu.sh
Signed-off-by: anoopradhika <anoop.k.chandran@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,11 @@
 
-cmake_minimum_required (VERSION 2.6)
+cmake_minimum_required (VERSION 2.8)
 # The version number.
 set (Tutorial_VERSION_MAJOR 1)
 set (Tutorial_VERSION_MINOR 0)
-set(CMAKE_CXX_FLAGS "-std=c++0x -Wall")
-message("CMAKE_CXX_FLAGS is ${CMAKE_CXX_FLAGS}")
-message("CMAKE_CXX_FLAGS_DEBUG is ${CMAKE_CXX_FLAGS_DEBUG}")
+#set(CMAKE_CXX_FLAGS "--std=gnu++11 -Wall")
+#set(CMAKE_C_COMPILER "gcc-5")
+#set(CMAKE_CXX_COMPILER "/usr/bin/g++-5")
 message("CMAKE_CXX_FLAGS_RELEASE is ${CMAKE_CXX_FLAGS_RELEASE}")
 project (osal_lib)
 add_subdirectory(communicator)
