Process Test WIP
Signed-off-by: anoopradhika <anoop.k.chandran@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,8 @@ add_subdirectory(communicator)
 add_subdirectory(Engine)
 add_subdirectory(Process)
 add_subdirectory(osal_test_base)
+add_subdirectory(lib/gtest)
+include_directories(${gtest_SOURCE_DIR}/inculde ${gtest_SOURCE_DIR})
 
 add_executable(osal_lib main.cpp)
 target_link_libraries(osal_lib communicator engine process)
