--- a/Process/CMakeLists.txt
+++ b/Process/CMakeLists.txt
@@ -23,6 +23,8 @@ cmake_minimum_required (VERSION 2.6)
 set (Tutorial_VERSION_MAJOR 1)
 set (Tutorial_VERSION_MINOR 0)
 
+add_subdirectory(Test)
 add_library(process  Process.cpp)
+#target_link_libraries(process engine)
 
 
