--- a/osal_test_base/CMakeLists.txt
+++ b/osal_test_base/CMakeLists.txt
@@ -24,5 +24,6 @@ set (Tutorial_VERSION_MAJOR 1)
 set (Tutorial_VERSION_MINOR 0)
 
 add_library(osal_test_base  osal_test_base.cpp)
+target_link_libraries(osal_test_base gtest gtest_main engine)
 
 
