- libuv link issue is solved - next get off the gtest lib pain
Signed-off-by: anoopradhika <anoop.k.chandran@gmail.com>

--- a/Engine/CMakeLists.txt
+++ b/Engine/CMakeLists.txt
@@ -24,5 +24,6 @@ set (Tutorial_VERSION_MAJOR 1)
 set (Tutorial_VERSION_MINOR 0)
 
 add_library(engine  Engine.cpp Engine_controller.cpp)
+target_link_libraries(engine libuv.a)
 
 
