fix the unit test path
Signed-off-by: anoopradhika <anoop.k.chandran@gmail.com>

--- a/callback_notifier/CMakeLists.txt
+++ b/callback_notifier/CMakeLists.txt
@@ -23,7 +23,7 @@ cmake_minimum_required (VERSION 2.6)
 set (Tutorial_VERSION_MAJOR 1)
 set (Tutorial_VERSION_MINOR 0)
 
-add_subdirectory(uTest)
+add_subdirectory(unit_test)
 add_library(osal_callback_notifier  callback_notifier.cpp)
 #target_link_libraries(process engine libuv.a)
 
