--- a/Process/CMakeLists.txt
+++ b/Process/CMakeLists.txt
@@ -23,7 +23,7 @@ cmake_minimum_required (VERSION 2.6)
 set (Tutorial_VERSION_MAJOR 1)
 set (Tutorial_VERSION_MINOR 0)
 
-add_subdirectory(Test)
+add_subdirectory(unit_test)
 add_library(process  Process.cpp)
 target_link_libraries(process engine libuv.a)
 
