Feature_7: process support (#11)
* Engine controller is added to abstract uv handle

* process build strcture is added
process interfaces are added
Signed-off-by: anoopradhika <anoop.k.chandran@gmail.com>

* C++ 11 added
Engine WIP

Signed-off-by: anoopradhika <anoop.k.chandran@gmail.com>

* build script is added for ubuntu

Signed-off-by: anoopradhika <anoop.k.chandran@gmail.com>

* Engine design changed to singleton

Signed-off-by: anoopradhika <anoop.k.chandran@gmail.com>

* c++11 flag support is removed from CMakeList.txt.
Now it is aviable in build_ubuntu.sh

Signed-off-by: anoopradhika <anoop.k.chandran@gmail.com>

* build error fixed

Signed-off-by: anoopradhika <anoop.k.chandran@gmail.com>

* Porcess implemented

Signed-off-by: anoopradhika <anoop.k.chandran@gmail.com>

* comments are added

Signed-off-by: anoopradhika <anoop.k.chandran@gmail.com>

* new files added to test class Process

Signed-off-by: anoopradhika <anoop.k.chandran@gmail.com>

* base test class for all test under OSAL

Signed-off-by: anoopradhika <anoop.k.chandran@gmail.com>

* WIP osal_base_test
TODO: insatll gtest lib

Signed-off-by: anoopradhika <anoop.k.chandran@gmail.com>

* - gtest installed in ubuntu
- base test structure is added

Signed-off-by: anoopradhika <anoop.k.chandran@gmail.com>

* WIP process test

Signed-off-by: anoopradhika <anoop.k.chandran@gmail.com>

* Process test WIP
UVlib link issue to be solved

Signed-off-by: anoopradhika <anoop.k.chandran@gmail.com>

* Process Test WIP

Signed-off-by: anoopradhika <anoop.k.chandran@gmail.com>

* Clean up

Signed-off-by: anoopradhika <anoop.k.chandran@gmail.com>

* - libuv link issue is solved
- next get off the gtest lib pain

Signed-off-by: anoopradhika <anoop.k.chandran@gmail.com>

* Process build executed successfully

Signed-off-by: anoopradhika <anoop.k.chandran@gmail.com>

* callback notifier and unit test is added

Signed-off-by: anoopradhik

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,22 @@
 
-cmake_minimum_required (VERSION 2.6)
+cmake_minimum_required (VERSION 2.8)
 # The version number.
 set (Tutorial_VERSION_MAJOR 1)
 set (Tutorial_VERSION_MINOR 0)
-
+#set (FARM_LIB "/home/neo/build/farm/ubantu/lib")
+message("CMAKE_CXX_FLAGSE is ${CMAKE_CXX_FLAGS}")
 project (osal_lib)
 add_subdirectory(communicator)
 add_subdirectory(Engine)
+add_subdirectory(Process)
+add_subdirectory(osal_test_base)
+add_subdirectory(lib/gtest)
+add_subdirectory(callback_notifier)
+include_directories(${gtest_SOURCE_DIR}/inculde ${gtest_SOURCE_DIR})
 
+LINK_DIRECTORIES(${FARM_LIB})
 add_executable(osal_lib main.cpp)
-target_link_libraries(osal_lib communicator engine)
+target_link_libraries(osal_lib communicator engine process)
 #add_executable(osal_lib ${Communicator_Sources} ${Controller_Sources} ${Transporter_Sources} )
 
 
