--- a/callback_notifier/unit_test/CMakeLists.txt
+++ b/callback_notifier/unit_test/CMakeLists.txt
@@ -23,7 +23,7 @@ cmake_minimum_required (VERSION 2.6)
 set (Tutorial_VERSION_MAJOR 1)
 set (Tutorial_VERSION_MINOR 0)
 
-add_library(engine  Engine.cpp Engine_controller.cpp)
-target_link_libraries(engine libuv.a)
 
+add_executable(callback_notifier_utest  callback_notifier_utest.cpp)
+target_link_libraries(callback_notifier_utest osal_callback_notifier osal_test_base)
 
